<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="enter username"
        android:text="@string/EnterUsername_Label"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="enter password"
        android:text="@string/EnterPassword_Label"/>
    <Button
        android:id="@+id/DoneButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/DoneButton"/>

</LinearLayout>